added more unit tests and implemented more provider methods

--- a/RavenDbProviders/RavenDbProviders.MembershipProvider.Tests/App.config
+++ b/RavenDbProviders/RavenDbProviders.MembershipProvider.Tests/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="RavenDb" connectionString="Server=your_server;Database=your_db; Uid=your_user_name;Pwd=your_password;" />
+		<add name="RavenDbMembershipDb" connectionString="Url = http://localhost:8888;Database = RavenDbMembershipProviderDb" />
 	</connectionStrings>
 	<system.web>
 		<membership defaultProvider="RavenDbMembershipProvider">
