--- a/RavenDbProviders/RavenDbProviders.MembershipProvider/RavenDbProviders.MembershipProvider.csproj
+++ b/RavenDbProviders/RavenDbProviders.MembershipProvider/RavenDbProviders.MembershipProvider.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml.Linq" />
@@ -100,6 +101,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MembershipExtensions.cs" />
     <Compile Include="PasswordHelper.cs" />
     <Compile Include="RavenDbMembershipProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
