Added aspnetwebapi example
completed more methods in membershipprovider and added additional unit tests

add first non-working version of roleprovider

--- a/RavenDbProviders/RavenDbProviders.RoleProvider.Tests/App.config
+++ b/RavenDbProviders/RavenDbProviders.RoleProvider.Tests/App.config
@@ -21,5 +21,14 @@
 					applicationName="/" />
 			</providers>
 		</membership>
+		<roleManager defaultProvider="RavenDbRoleProvider" enabled="true">
+			<providers>
+				<clear/>
+				<add name="RavenDbRoleProvider"
+					 type="RavenDbProviders.RoleProvider.RavenDbRoleProvider, RavenDbProviders.RoleProvider, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+					 connectionStringName="RavenDbMembershipDb"
+					 />
+			</providers>
+		</roleManager>
 	</system.web>
 </configuration>
