--- a/RavenDbProviders/RavenDbProviders.RoleProvider/RavenDbProviders.RoleProvider.csproj
+++ b/RavenDbProviders/RavenDbProviders.RoleProvider/RavenDbProviders.RoleProvider.csproj
@@ -100,6 +100,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PredicateBuilder.cs" />
     <Compile Include="RavenDbRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
