--- a/RavenDb/RavenDbDemo.PerfTest/packages.config
+++ b/RavenDb/RavenDbDemo.PerfTest/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="4.0.8" />
-  <package id="NLog" version="2.0.0.2000" />
-  <package id="RavenDB" version="1.0.701" />
-  <package id="RavenDB-Embedded" version="1.0.701" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="RavenDB.AspNetHost" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Client" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Database" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Embedded" version="2.0.2330" targetFramework="net40" />
 </packages>
