--- a/RavenDb/RavenDbDemo.Repository.Tests/packages.config
+++ b/RavenDb/RavenDbDemo.Repository.Tests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="4.0.8" />
-  <package id="Ninject" version="2.2.1.4" />
-  <package id="NLog" version="2.0.0.2000" />
-  <package id="NUnit" version="2.6.0.12054" />
-  <package id="RavenDB-Embedded" version="1.0.701" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
+  <package id="NUnit" version="2.6.2" targetFramework="net40" />
+  <package id="RavenDB.AspNetHost" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Client" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Database" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Embedded" version="2.0.2330" targetFramework="net40" />
 </packages>
