--- a/RavenDb/RavenDbDemo.WebSite/packages.config
+++ b/RavenDb/RavenDbDemo.WebSite/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
-  <package id="Newtonsoft.Json" version="4.0.8" />
-  <package id="Ninject" version="2.2.1.4" />
-  <package id="Ninject.MVC3" version="2.2.2.0" />
-  <package id="NLog" version="2.0.0.2000" />
-  <package id="RavenDB" version="1.0.701" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
+  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" />
+  <package id="RavenDB.AspNetHost" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Client" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Database" version="2.0.2330" targetFramework="net40" />
+  <package id="RavenDB.Embedded" version="2.0.2330" targetFramework="net40" />
   <package id="WebActivator" version="1.5" />
 </packages>
