--- a/Redis/Redis.SessionStateProvider/Redis.SessionStateProvider.Tests/packages.config
+++ b/Redis/Redis.SessionStateProvider/Redis.SessionStateProvider.Tests/packages.config
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BookSleeve" version="1.3.39" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
-  <package id="ServiceStack.Common" version="3.9.37" targetFramework="net45" />
-  <package id="ServiceStack.Redis" version="3.9.37" targetFramework="net45" />
-  <package id="ServiceStack.Text" version="3.9.37" targetFramework="net45" />
 </packages>
